[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.3",
    "typing_extensions>=4.7.1",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "requests>=2.32.3",
    "pyarrow>=20.0.0",
    "numpy>=2.2.6",
    "polars>=1.30.0",
    "tomli>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.5.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]